--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,18 @@
   command = "npm run build"
   publish = "dist"
 
+# SPA를 위한 기본 리다이렉트
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
+  conditions = {Path = ["/", "!/api/*"]}
+
+# API 요청을 백엔드로 프록시
+[[redirects]]
+  from = "/api/*"
+  to = "https://simcar.kro.kr/api/:splat"
+  status = 200
+  force = true
+  headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"}
